# csv_to_parquet

./: .gitignore  README.md  pyproject.toml
src/csv_to_parquet/: convert_to_parquet.py  eda.py
src/data_utils/: log_config.py
